fix: Prevent text overflow in activities

--- a/client/src/components/activities/BoardActivitiesModal/Item.module.scss
+++ b/client/src/components/activities/BoardActivitiesModal/Item.module.scss
@@ -16,6 +16,7 @@
     padding-bottom: 14px;
     vertical-align: top;
     width: calc(100% - 40px);
+    word-wrap: break-word;
   }
 
   .date {
